@@ -2,6 +2,9 @@ package client.rapid.notification;
 
 import client.rapid.Wrapper;
 import client.rapid.util.MinecraftUtil;
+import client.rapid.util.PacketUtil;
+import client.rapid.util.TimerUtil;
+import client.rapid.util.animation.Animation;
 import client.rapid.util.font.*;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.*;
@@ -12,18 +15,18 @@ import net.minecraft.util.ResourceLocation;
 public class Notification {
     private final Type type;
     private final String title, message;
-    private final long fadedIn, fadeOut, end;
     private final MCFontRenderer font = Fonts.normal;
 
+    public final TimerUtil timer = new TimerUtil();
+
     private long start;
+
+    private final Animation animation = new Animation(1, 0.25f);
 
     public Notification(String title, String message, Type type) {
         this.type = type;
         this.title = title;
         this.message = message;
-        fadedIn = 200L * 2;
-        fadeOut = fadedIn + 500L * 2;
-        end = fadeOut + fadedIn;
     }
 
     public enum Type {
@@ -35,7 +38,7 @@ public class Notification {
     }
 
     public boolean isShown() {
-        return getTime() <= end;
+        return getTime() <= 3500;
     }
 
     private long getTime() {
@@ -50,23 +53,30 @@ public class Notification {
         Minecraft mc = MinecraftUtil.mc;
 
         boolean mcFont = Wrapper.getSettingsManager().getSettingByName("Hud Settings", "Minecraft Font").isEnabled();
-        double offset;
         int width = mcFont ? mc.fontRendererObj.getStringWidth(message) + 35 : font.getStringWidth(message) + 35;
 
-        if (getTime() < fadedIn)
-            offset = Math.tanh(getTime() / (double) (150) * 3.0) * width;
-        else
-            offset = getTime() > fadeOut ? (Math.tanh(1 - (getTime() - fadeOut) / (double) (end - fadeOut) * 3.0) * width) : width;
+        Gui.drawRect(x - animation.getValue(), y - 30, x, y - 4, 0x90000000);
 
-        int color;
+        if(mcFont) {
+            mc.fontRendererObj.drawString(title, (int) (x - animation.getValue() + 33), y - 27, -1);
+            mc.fontRendererObj.drawString(message, (int) (x - animation.getValue() + 33), y - 15, -1);
+        } else {
+            font.drawString(title, (int) (x - animation.getValue() + 33), y - 27, -1);
+            font.drawString(message, (int) (x - animation.getValue() + 33), y - 15, -1);
+        }
+
+        if(timer.reached(2450)) {
+            animation.interpolate(0);
+        } else {
+            animation.interpolate(getTime() > 0 ? width : 0);
+        }
+
+        int color = 0xFFCC0012;
 
         if (type == Type.INFO)
             color = 0xFF001AC4;
-        else
-            color = type == Type.WARNING ? 0xFFCCC100 : 0xFFCC0012;
-
-        Gui.drawRect(x - offset, y - 30, x, y - 4, 0x90000000);
-        Gui.drawRect(x - offset, y - 4, x, y - 5, color);
+        else if (type == Type.WARNING)
+            color = 0xFFCCC100;
 
         GlStateManager.pushMatrix();
         GlStateManager.color(1, 1, 1);
@@ -79,15 +89,8 @@ public class Notification {
         else
             mc.getTextureManager().bindTexture(new ResourceLocation(type == Type.ERROR ? "rapid/images/error.png" : "rapid/images/info.png"));
 
-        Gui.drawModalRectWithCustomSizedTexture((int) (x - offset) + 6, y - 27, 0, 0, 20, 20, 20, 20);
+        Gui.drawModalRectWithCustomSizedTexture((int) (x - animation.getValue()) + 6, y - 27, 0, 0, 20, 20, 20, 20);
         GlStateManager.popMatrix();
 
-        if(mcFont) {
-            mc.fontRendererObj.drawString(title, (int) (x - offset + 33), y - 27, -1);
-            mc.fontRendererObj.drawString(message, (int) (x - offset + 33), y - 15, -1);
-        } else {
-            font.drawString(title, (int) (x - offset + 33), y - 27, -1);
-            font.drawString(message, (int) (x - offset + 33), y - 15, -1);
-        }
     }
 }
